--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -118,6 +118,19 @@ li.bullet-for-sale
     position: relative
     left: -5px
 
+.for-sale-after
+  &:after
+    font-family: FontAwesome
+    font-weight: normal
+    font-style: normal
+    display: inline-block
+    text-decoration: none
+    content: "\f07a"
+    position: relative
+    right: -3px
+    top:  1px
+
+
 .icon-white
   color: $white
 
