add label colors

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -33,6 +33,10 @@
 $orange: #DB7354
 $dark-orange: #D25029
 $darker-orange: #B84724
+$blue: #006DCC
+$blue-opaque: rgba(0,109,204,.8)
+$red: #DA4f49
+$red-opaque: rgba(218,79,73,.8)
 
 ////////////////////////////////////////
 
@@ -319,6 +323,13 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   font-size: 20px
   line-height: 20px
   padding: 5px 10px
+  border-radius: 0px
+
+.label-science
+  background: $blue
+
+.label-technique
+  background: $red
 
 /* Buttons */
 
