--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -60,10 +60,10 @@
         .hero-unit
           %h2 Sign up for a FREE account
           %hr
-          %ul
-            %li Keep track of your favorite recipes
-            %li Save notes on what you've cooked
-            %li FREE Bonus Content: Sous Vide Time and Temperature data sheets
+          / %ul
+          /   %li Keep track of your favorite recipes
+          /   %li Save notes on what you've cooked
+          /   %li FREE Bonus Content: Sous Vide Time and Temperature data sheets
           = link_to sign_up_path, class: 'btn btn-primary btn-large' do
             Sign Up Now
 
