--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -17,53 +17,59 @@
             = link_to 'Resources', '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'}
             %ul.dropdown-menu
               %li
-                = link_to '#' do
-                  .media
-                    %h4
-                      .pull-left
-                        Ingredients
-                      .pull-right
-                        %small
-                          See More Ingredients
-                = link_to '#' do
-                  .media
-                    .pull-left
-                      = image_tag 'http://placehold.it/50x50', class:'media-object'
-                    .media-body
-                      %h5.media-heading Ingredient Title
-                      %p Ingredient Description
-              %li
                 = link_to techniques_path do
-                  .media
-                    %h4
-                      .pull-left
-                        Techniques
-                      .pull-right
-                        %small
-                          See More Techniques
-                = link_to '#' do
-                  .media
-                    .pull-left
-                      = image_tag 'http://placehold.it/50x50', class:'media-object'
-                    .media-body
-                      %h5.media-heading Technique Title
-                      %p Technique Description
+                  Techniques
               %li
                 = link_to sciences_path do
-                  .media
-                    %h4
-                      .pull-left
-                        Science
-                      .pull-right
-                        %small
-                          See More Science
-                = link_to '#' do
-                  .media
-                    .pull-left
-                      = image_tag 'http://placehold.it/50x50', class:'media-object'
-                    .media-body
-                      %h5.media-heading Science Title
-                      %p Science Description
+                  Science
+              / %li
+              /   = link_to '#' do
+              /     .media
+              /       %h4
+              /         .pull-left
+              /           Ingredients
+              /         .pull-right
+              /           %small
+              /             See More Ingredients
+              /   = link_to '#' do
+              /     .media
+              /       .pull-left
+              /         = image_tag 'http://placehold.it/50x50', class:'media-object'
+              /       .media-body
+              /         %h5.media-heading Ingredient Title
+              /         %p Ingredient Description
+              / %li
+              /   = link_to techniques_path do
+              /     .media
+              /       %h4
+              /         .pull-left
+              /           Techniques
+              /         .pull-right
+              /           %small
+              /             See More Techniques
+              /   = link_to '#' do
+              /     .media
+              /       .pull-left
+              /         = image_tag 'http://placehold.it/50x50', class:'media-object'
+              /       .media-body
+              /         %h5.media-heading Technique Title
+              /         %p Technique Description
+              / %li
+              /   = link_to sciences_path do
+              /     .media
+              /       %h4
+              /         .pull-left
+              /           Science
+              /         .pull-right
+              /           %small
+              /             See More Science
+              /   = link_to '#' do
+              /     .media
+              /       .pull-left
+              /         = image_tag 'http://placehold.it/50x50', class:'media-object'
+              /       .media-body
+              /         %h5.media-heading Science Title
+              /         %p Science Description
           %li
             = link_to 'Forum', 'http://forum.chefsteps.com'
           %li
