--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,7 +8,7 @@
         .featured-and-filmstrip
           #featured-video
             .video-container
-              %iframe{src: youtube_url(@featured_id, 0) }
+              %iframe{src: youtube_url(@featured_id, 0), webkitallowfullscreen: true, mozallowfullscreen:true, allowfullscreen: true }
           #filmstrip-container
             .filmstrip
               - @filmstrip.each do |video|
