--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -148,6 +148,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     border: none
   #image-viewer
     position: absolute
+    top: 0px
     display: none
     #image-viewer-close
       position: absolute
