--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -50,7 +50,7 @@
   .grid-item
     position: absolute
     width: 250px
-    height: 240px
+    height: 185px
     background-color: #d15129
     text-indent: 10px
     color: #fff
@@ -59,6 +59,7 @@
 
     .caption
       text-style: italic
+      padding-right: 10px
 
     img
       display: block
@@ -84,8 +85,8 @@
     color: #004756
     font-size: 1.4em
     text-align: center
-    padding-top: 80px
-    height: 160px
+    padding-top: 55px
+    height: 130px
 
     .large-num
       border: 4px solid #d15129
