Add cursor: move to draggable elements

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -47,6 +47,10 @@
 .order-sort
   .grid-container
     position: relative
+
+  .draggable
+    cursor: move
+
   .grid-item
     position: absolute
     width: 250px
