update side scroll carousel

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -253,9 +253,9 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 //////////
 
-.carousel-small
+.carousel-scroll
   overflow: auto
-  .carousel-small-inner
+  .carousel-scroll-inner
     height: 160px
     .item
       width: 285px
