hotfixes - strip titles, html safe titles

--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -54,7 +54,7 @@
               %h5 Used In
               %ul.used-in
                 - used_in.each do |used_in_act|
-                  %li= link_to used_in_act.title, activity_path(used_in_act)
+                  %li= link_to used_in_act.title.html_safe, activity_path(used_in_act)
 
 
         - if activity.is_recipe? and activity.cooked_this > 0
