Add toggler to show response/correct answer on results.

--- a/app/assets/stylesheets/application/quizzes/_results.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_results.css.sass
@@ -37,4 +37,4 @@
 
   @import application/quizzes/box_sort_result
   @import application/quizzes/multiple_choice_result
-
+  @import application/quizzes/order_sort_result
