--- a/app/views/quizzes/_order_sort_question_result.html.haml
+++ b/app/views/quizzes/_order_sort_question_result.html.haml
@@ -12,9 +12,12 @@
       %em Your answer was #{formatted_solution_score(result[:solution_score])} correct.
 
 .order-sort.clearfix.results
+  .toggle-tabs
+    = link_to 'Correct answer', '#', :class => 'toggle-tab active-tab correct-answer', "data-answer" => result[:best_solution_image_ids]
+    = link_to 'Your answer', '#', :class => 'toggle-tab your-answer', "data-answer" => result[:user_answer_image_ids]
   .grid-container
-    - result[:answer_images].each_with_index do |image, index|
-      .grid-item
+    - result[:best_solution_answer_images].each_with_index do |image, index|
+      .grid-item{ "data-image-id" => image[:id] }
         = image_tag(image[:url])
         .caption
           .num.show
