--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -183,7 +183,8 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
       width: 90%
       padding-top: 0px
       h4
-        margin: 0px
+        margin-top: 12px
+        margin-bottom: 0px
       ul, li
         list-style: none
         padding: 5px 0px
