--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,8 @@
     %meta{name: 'description', content: yield(:description)}
     %meta{name: 'keywords', content: yield(:keywords)}
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
+    / YouTube Iframe API can't be loaded async so we have to load it directly
+    %script{src:'http://www.youtube.com/iframe_api'}
     / = auto_discovery_link_tag :atom, feed_path
     / = auto_discovery_link_tag :rss, feed_path
     / %link{href: "/favicon.ico", rel: "shortcut icon"}
@@ -29,6 +31,6 @@
       = yield
 
     = render 'layouts/footer'
-    = render 'layouts/youtube'
+    / = render 'layouts/youtube'
     = render 'layouts/twitter'
     = javascript_include_tag 'application'
