add webkit scroll

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -160,6 +160,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 .ordered-steps
   overflow: auto
+  -webkit-overflow-scrolling: touch
   //background: -webkit-linear-gradient(white 30%, hsla(0,0%,100%,0)), -webkit-linear-gradient(hsla(0,0%,100%,0), white 70%) bottom, -webkit-radial-gradient(50% 0, rgba(0,0,0,.2), transparent 70%), -webkit-radial-gradient(50% 100%, rgba(0,0,0,.2), transparent 70%) bottom
   //background-repeat: no-repeat
   //background-size: 100% 60px, 100% 60px, 100% 14px, 100% 14px
@@ -256,6 +257,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 .carousel-scroll
   overflow: auto
+  -webkit-overflow-scrolling: touch
   .carousel-scroll-inner
     height: 160px
     .item
