negative margin for hero image on large screens

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -465,7 +465,9 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 /* Large desktop */
 @media (min-width: 1200px)
- 
+  .media-hero
+    img
+      margin-top: -15%
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px)
  
