--- a/app/views/sciences/index.html.haml
+++ b/app/views/sciences/index.html.haml
@@ -5,6 +5,6 @@
     .row
       - @sciences.each do |science|
         .span4
-          = link_to science_path(science) do
+          = link_to science do
             = render 'shared/media_centered', media: science, main: 'Science', size: 'medium'
     = paginate @sciences
