--- a/app/views/techniques/index.html.haml
+++ b/app/views/techniques/index.html.haml
@@ -5,6 +5,6 @@
     .row
       - @techniques.each do |technique|
         .span4
-          = link_to technique_path(technique) do
+          = link_to technique do
             = render 'shared/media_centered', media: technique, main: 'Technique', size: 'medium'
     = paginate @techniques
