--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     %meta{charset: 'utf-8'}
     %meta{name: 'description', content: yield(:description)}
     %meta{name: 'keywords', content: yield(:keywords)}
-    %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
+    %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, user-scalable=no'}
     / YouTube Iframe API can't be loaded async so we have to load it directly
     %script{src:'http://www.youtube.com/iframe_api'}
     / = auto_discovery_link_tag :atom, feed_path
