making sure seo title and description work

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,6 @@
+- content_for :title, ""
+- content_for :description, "Free online cooking school from key members of the Modernist Cuisine team. Our first course will teach you everything you need to know about sous vide cooking."
+
 = content_for :hero do
   .container-fluid#hero-container
     .row-fluid
