--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -1,3 +1,8 @@
+- content_for :title, @activity.title.html_safe
+- content_for :description, @activity.description != "" ? @activity.description.html_safe : @activity.title.html_safe
+- content_for :canonical_link, activity_url(@activity)
+- content_for :keywords, @activity.tag_list.join(',')
+
 .row
   .span6
     %h1
