--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 %html.no-js{lang: "en", 'xmlns:fb' => "http://ogp.me/ns/fb#" }
   %head
-    %title ChefSteps
+    %title= "Chefsteps #{yield :title}"
     = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_link_tag 'print',  media: 'print'
     = csrf_meta_tags
@@ -10,13 +10,13 @@
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, user-scalable=no'}
     / YouTube Iframe API can't be loaded async so we have to load it directly
     %script{src:'http://www.youtube.com/iframe_api'}
-    / = auto_discovery_link_tag :atom, feed_path
-    / = auto_discovery_link_tag :rss, feed_path
-    / %link{href: "/favicon.ico", rel: "shortcut icon"}
-    / %meta{:name => "google-translate-customization", :content => "d64492c5d22d7921-60170f9c9b7267c6-g7179c5f7a7e64573-d"}
-    / -if ! yield(:canonical_link).empty?
-    /   %link{rel: "canonical", href: yield(:canonical_link) }
-    / = render 'layouts/google_analytics' if Rails.env.production?
+    = auto_discovery_link_tag :atom, feed_path
+    = auto_discovery_link_tag :rss, feed_path
+    %link{href: "/favicon.ico", rel: "shortcut icon"}
+    %meta{:name => "google-translate-customization", :content => "d64492c5d22d7921-60170f9c9b7267c6-g7179c5f7a7e64573-d"}
+    - unless yield(:canonical_link).blank?
+      %link{rel: "canonical", href: yield(:canonical_link) }
+    = render 'layouts/google_analytics' if Rails.env.production?
 
   %body
     = render 'layouts/navigation'
