--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -51,12 +51,22 @@
                   %h4= step.title
                 :markdown
                   #{raw step.directions}
-                - if step.ingredients.any?
-                  .step-ingredients
-                    = render 'ingredients_list', ingredients: step.ingredients
-              .step-image
-                = image_tag s3_image_url(step.image_id) if step.image_id?
-              / = link_to '?', '#', class: 'btn btn-warning btn-mini pull-right'
+                / - if step.ingredients.any?
+                /   .step-ingredients
+                /     = render 'ingredients_list', ingredients: step.ingredients
+              .step-actions
+                -if step.ingredients.any?
+                  .step-action-item.step-ingredients
+                    .btn.btn-primary.btn-small
+                      Show Ingredients
+                    .step-ingredients-source
+                      = render 'ingredients_list', ingredients: step.ingredients
+                - if step.image_id?
+                  .step-action-item.step-image
+                    %i.icon-picture.icon-large
+                    .step-image-source
+                      = image_tag s3_image_url(step.image_id)
+                
 
 .row
   .span12
