--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -193,8 +193,8 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
         margin: 0px
     .step-actions
       margin-left: 10%
+      width: 90%
       .step-action-item
-        padding: 0px 10px
         display: inline-block
       .step-ingredients
         .step-ingredients-source
