--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -19,7 +19,7 @@
           #hero-player
       .span1
         = link_to '#', id: 'player-close' do
-          %p close
+          %i.icon-remove.icon-large
 
 .row
   .span12
