update home controller

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -68,7 +68,7 @@
           /   %li Keep track of your favorite recipes
           /   %li Save notes on what you've cooked
           /   %li FREE Bonus Content: Sous Vide Time and Temperature data sheets
-          = link_to sign_up_path, class: 'btn btn-primary btn-large' do
+          = link_to sign_up_path, class: 'btn btn-primary btn-large pull' do
             Sign Up Now
 
 = # TODO Implement Culinary Challenge and Testimonials
