--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -4,7 +4,7 @@
       .span12{:itemprop => "description"}
         - if activity.has_description?
           :markdown
-            #{activity.description}
+            #{apply_shortcodes(activity.description)}
       -# .span4
         -# Removed for demo
         -# .row
