fix conversion bug

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -198,7 +198,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
         display: inline-block
       .step-ingredients
         .step-ingredients-source
-          display: none
+          // display: none
       .step-image
         img
           display: none
