--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -47,8 +47,33 @@ $red-opaque: rgba(218,79,73,.8)
 textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input
   height: inherit
 
-.dropdown-menu
-  min-width: 400px
+.navbar .nav li.dropdown.open > .dropdown-toggle, .navbar .nav li.dropdown.active > .dropdown-toggle, .navbar .nav li.dropdown.open.active > .dropdown-toggle
+  background: $dark_orange
+  color: white
+
+.navbar .nav > li > .dropdown-menu
+  // min-width: 400px
+  background: none
+  border-radius: 0px
+  margin: 0px
+  li
+    a
+      color: white
+      padding: 3px 10px
+      &:hover
+        background: $dark_orange
+  &:after
+    content: normal
+  &:before
+    content: normal
+  .dropdown-background
+    background: black
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0px
+    z-index: -1
+    opacity: .6
 .well
   border: none
   border-radius: 0px
@@ -198,7 +223,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
         display: inline-block
       .step-ingredients
         .step-ingredients-source
-          //display: none
+          display: none
       .step-image
         img
           display: none
