comment out styleguide css

--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -1,100 +1,100 @@
-@import application
+// @import application
 
-= styleguide-swatch($color)
-  border: 1px solid darken($color, 20%)
-  background: $color
+// = styleguide-swatch($color)
+//   border: 1px solid darken($color, 20%)
+//   background: $color
 
-.show-grid
-  margin-top: 10px
+// .show-grid
+//   margin-top: 10px
 
-.show-grid [class*="span"]
-  border-radius: 3px
-  background-color: #eee
-  border: 1px solid #ccc
-  line-height: 40px
-  min-height: 40px
-  text-align: center
+// .show-grid [class*="span"]
+//   border-radius: 3px
+//   background-color: #eee
+//   border: 1px solid #ccc
+//   line-height: 40px
+//   min-height: 40px
+//   text-align: center
 
-.styleguide-sans-tiny
-  +font-sans-tiny
-.styleguide-sans-small
-  +font-sans-small
-.styleguide-sans-medium
-  +font-sans-medium
-.styleguide-sans-large
-  +font-sans-large
+// .styleguide-sans-tiny
+//   +font-sans-tiny
+// .styleguide-sans-small
+//   +font-sans-small
+// .styleguide-sans-medium
+//   +font-sans-medium
+// .styleguide-sans-large
+//   +font-sans-large
 
-.styleguide-serif-tiny
-  +font-serif-tiny
-.styleguide-serif-small
-  +font-serif-small
-.styleguide-serif-medium
-  +font-serif-medium
-.styleguide-serif-large
-  +font-serif-large
-.styleguide-serif-huge
-  +font-serif-huge
+// .styleguide-serif-tiny
+//   +font-serif-tiny
+// .styleguide-serif-small
+//   +font-serif-small
+// .styleguide-serif-medium
+//   +font-serif-medium
+// .styleguide-serif-large
+//   +font-serif-large
+// .styleguide-serif-huge
+//   +font-serif-huge
 
-.styleguide-color
-  +font-serif-tiny
-  &.brick
-    +styleguide-swatch($brick)
-    color: $white
-  &.brickLight
-    +styleguide-swatch($brickLight)
-    color: $white
-  &.white
-    +styleguide-swatch($white)
-  &.black
-    +styleguide-swatch($black)
-    color: $white
-  &.brickDark
-    +styleguide-swatch($brickDark)
-    color: $white
-  &.beige
-    +styleguide-swatch($beige)
-    color: $white
-  &.gray
-    +styleguide-swatch($gray)
-    color: $white
-  &.grayMedium
-    +styleguide-swatch($grayMedium)
-    color: $white
-  &.grayDark
-    +styleguide-swatch($grayDark)
-    color: $white
-  &.grayDarker
-    +styleguide-swatch($grayDarker)
-    color: $white
-  &.grayLight
-    +styleguide-swatch($grayLight)
-  &.grayLighter
-    +styleguide-swatch($grayLighter)
-  &.blue
-    +styleguide-swatch($blue)
-  &.blueDark
-    +styleguide-swatch($blueDark)
-    color: $white
-  &.green
-    +styleguide-swatch($green)
-    color: $white
-  &.red
-    +styleguide-swatch($red)
-    color: $white
+// .styleguide-color
+//   +font-serif-tiny
+//   &.brick
+//     +styleguide-swatch($brick)
+//     color: $white
+//   &.brickLight
+//     +styleguide-swatch($brickLight)
+//     color: $white
+//   &.white
+//     +styleguide-swatch($white)
+//   &.black
+//     +styleguide-swatch($black)
+//     color: $white
+//   &.brickDark
+//     +styleguide-swatch($brickDark)
+//     color: $white
+//   &.beige
+//     +styleguide-swatch($beige)
+//     color: $white
+//   &.gray
+//     +styleguide-swatch($gray)
+//     color: $white
+//   &.grayMedium
+//     +styleguide-swatch($grayMedium)
+//     color: $white
+//   &.grayDark
+//     +styleguide-swatch($grayDark)
+//     color: $white
+//   &.grayDarker
+//     +styleguide-swatch($grayDarker)
+//     color: $white
+//   &.grayLight
+//     +styleguide-swatch($grayLight)
+//   &.grayLighter
+//     +styleguide-swatch($grayLighter)
+//   &.blue
+//     +styleguide-swatch($blue)
+//   &.blueDark
+//     +styleguide-swatch($blueDark)
+//     color: $white
+//   &.green
+//     +styleguide-swatch($green)
+//     color: $white
+//   &.red
+//     +styleguide-swatch($red)
+//     color: $white
 
-.styleguide-row-layout
-  margin-bottom: 10px
+// .styleguide-row-layout
+//   margin-bottom: 10px
 
-.styleguide-row-layout [class*="span"]
-  background-color: #eee
-  text-align: center
-  padding: 10px 0
+// .styleguide-row-layout [class*="span"]
+//   background-color: #eee
+//   text-align: center
+//   padding: 10px 0
 
-.styleguide-dark-background
-  background: $black !important
+// .styleguide-dark-background
+//   background: $black !important
 
-#checkboxes
-  border: 1px solid $grayLight
-  +border-radius(3px)
-  background: whiteSmoke
-  padding: 40px
+// #checkboxes
+//   border: 1px solid $grayLight
+//   +border-radius(3px)
+//   background: whiteSmoke
+//   padding: 40px
