--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -16,20 +16,19 @@
 .row
   .span12
     .row
-      .span6.section
-        #video-ingredient-unit
-          .video-container
-            - if @activity.youtube_id?
-              %iframe{src: youtube_url(@activity.youtube_id)}
-            - elsif @activity.image_id?
-              = image_tag s3_image_url(@activity.image_id)
-            #image-viewer
-              #image-viewer-container
-              #image-viewer-close
-                %i.icon-remove.icon-large
-          - if @activity.ingredients.any?
-            .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
-              = render 'ingredients_list', ingredients: @activity.ingredients
+      .span6.section#video-ingredient-unit
+        .video-container
+          - if @activity.youtube_id?
+            %iframe{src: youtube_url(@activity.youtube_id)}
+          - elsif @activity.image_id?
+            = image_tag s3_image_url(@activity.image_id)
+          #image-viewer
+            #image-viewer-container
+            #image-viewer-close
+              %i.icon-remove.icon-large
+        - if @activity.ingredients.any?
+          .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
+            = render 'ingredients_list', ingredients: @activity.ingredients
         - if @activity.required_equipment.any?
           .section
             %h4 Equipment and Materials
